// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enroll-profile-with-password should display field level error when password does not fulfill requirements 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="siwContainer MuiBox-root emotion-2"
      >
        <div
          class="okta-sign-in-header auth-header siwHeader MuiBox-root emotion-3"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 emotion-4"
          />
        </div>
        <div
          class="MuiBox-root emotion-5"
        >
          <form
            class="o-form siwForm"
            data-se="o-form"
            novalidate=""
          >
            <div
              class="MuiBox-root emotion-6"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-7"
                role="alert"
              >
                <div
                  class="MuiAlert-icon emotion-8"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-9"
                    fill="none"
                    focusable="false"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M13.983 14.6471C13.4706 15 12.6329 15 10.9575 15H5.04248C3.36707 15 2.52937 15 2.01699 14.6471C1.56939 14.3387 1.26655 13.8615 1.17816 13.3252C1.07698 12.7114 1.43367 11.9534 2.14706 10.4374L5.10455 4.15277C6.02878 2.18879 6.49089 1.2068 7.12576 0.898255C7.6777 0.630012 8.32225 0.630012 8.87419 0.898255C9.50906 1.2068 9.97117 2.18879 10.8954 4.15277L13.8529 10.4374C14.5663 11.9534 14.923 12.7114 14.8218 13.3252C14.7334 13.8615 14.4306 14.3387 13.983 14.6471ZM7.99998 10C7.72383 10 7.49998 9.77614 7.49998 9.5L7.49998 5H8.49998L8.49998 9.5C8.49998 9.77614 8.27612 10 7.99998 10ZM7.99998 13C8.14831 13 8.29332 12.956 8.41665 12.8736C8.53999 12.7912 8.63612 12.6741 8.69288 12.537C8.74965 12.4 8.7645 12.2492 8.73556 12.1037C8.70662 11.9582 8.6352 11.8246 8.53031 11.7197C8.42542 11.6148 8.29178 11.5434 8.14629 11.5144C8.00081 11.4855 7.85001 11.5003 7.71296 11.5571C7.57592 11.6139 7.45878 11.71 7.37637 11.8333C7.29396 11.9567 7.24998 12.1017 7.24998 12.25C7.24998 12.4489 7.32899 12.6397 7.46964 12.7803C7.6103 12.921 7.80106 13 7.99998 13Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <div
                  class="MuiAlert-message emotion-10"
                >
                  We found some errors. Please review the form and make corrections.
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root emotion-11"
            >
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-13"
                >
                  <h2
                    class="MuiTypography-root MuiTypography-h4 emotion-14"
                    data-se="o-form-head"
                    id="enroll-profile_Title_Sign_up_NON_NULL_VALUE_1"
                    tabindex="-1"
                  >
                    Sign up
                  </h2>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-13"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-17"
                    data-se="o-form-explain"
                    id="enroll-profile_Description_Fields_are_required_unless_marked_optional_NON_NULL_VALUE_2"
                  >
                    Fields are required unless marked optional.
                  </p>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <figure
                  class="MuiBox-root emotion-19"
                  data-se="password-authenticator--rules"
                  id="enroll-profile_PasswordRequirements_NON_NULL_VALUE_3"
                >
                  <figcaption
                    class="password-authenticator--heading MuiBox-root emotion-20"
                  >
                    Password requirements:
                  </figcaption>
                  <ul
                    class="MuiBox-root emotion-21"
                    id="password-authenticator--list"
                  >
                    <li
                      class="MuiBox-root emotion-22"
                    >
                      <div
                        class="MuiBox-root emotion-23"
                      >
                        <div
                          aria-hidden="true"
                          class="passwordRequirementIcon MuiBox-root emotion-24"
                        >
                          <svg
                            class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-25"
                            fill="none"
                            focusable="false"
                            role="img"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <title>
                              info
                            </title>
                          </svg>
                        </div>
                        <div
                          class="MuiBox-root emotion-20"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-27"
                          >
                            At least 8 characters
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-22"
                    >
                      <div
                        class="MuiBox-root emotion-23"
                      >
                        <div
                          aria-hidden="true"
                          class="passwordRequirementIcon MuiBox-root emotion-24"
                        >
                          <svg
                            class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-25"
                            fill="none"
                            focusable="false"
                            role="img"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <title>
                              info
                            </title>
                          </svg>
                        </div>
                        <div
                          class="MuiBox-root emotion-20"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-27"
                          >
                            A lowercase letter
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-22"
                    >
                      <div
                        class="MuiBox-root emotion-23"
                      >
                        <div
                          aria-hidden="true"
                          class="passwordRequirementIcon MuiBox-root emotion-24"
                        >
                          <svg
                            class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-25"
                            fill="none"
                            focusable="false"
                            role="img"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <title>
                              info
                            </title>
                          </svg>
                        </div>
                        <div
                          class="MuiBox-root emotion-20"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-27"
                          >
                            An uppercase letter
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-22"
                    >
                      <div
                        class="MuiBox-root emotion-23"
                      >
                        <div
                          aria-hidden="true"
                          class="passwordRequirementIcon MuiBox-root emotion-24"
                        >
                          <svg
                            class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-25"
                            fill="none"
                            focusable="false"
                            role="img"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <title>
                              info
                            </title>
                          </svg>
                        </div>
                        <div
                          class="MuiBox-root emotion-20"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-27"
                          >
                            A number
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-22"
                    >
                      <div
                        class="MuiBox-root emotion-23"
                      >
                        <div
                          aria-hidden="true"
                          class="passwordRequirementIcon MuiBox-root emotion-24"
                        >
                          <svg
                            class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-25"
                            fill="none"
                            focusable="false"
                            role="img"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <title>
                              info
                            </title>
                          </svg>
                        </div>
                        <div
                          class="MuiBox-root emotion-20"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-27"
                          >
                            No parts of your username
                          </p>
                        </div>
                      </div>
                    </li>
                  </ul>
                </figure>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-20"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-54"
                    data-shrink="false"
                    for="userProfile.email"
                  >
                    Email
                    <span
                      aria-hidden="true"
                      class="no-translate MuiBox-root emotion-55"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-56"
                    required="true"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="email"
                      class="MuiInputBase-input emotion-57"
                      data-se="userProfile.email"
                      id="userProfile.email"
                      inputmode="email"
                      name="userProfile.email"
                      required=""
                      type="text"
                    />
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-20"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-54"
                    data-shrink="false"
                    for="userProfile.firstName"
                  >
                    First name
                    <span
                      aria-hidden="true"
                      class="no-translate MuiBox-root emotion-55"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-56"
                    required="true"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="given-name"
                      class="MuiInputBase-input emotion-57"
                      data-se="userProfile.firstName"
                      id="userProfile.firstName"
                      name="userProfile.firstName"
                      required=""
                      type="text"
                    />
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-20"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-54"
                    data-shrink="false"
                    for="userProfile.lastName"
                  >
                    Last name
                    <span
                      aria-hidden="true"
                      class="no-translate MuiBox-root emotion-55"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-56"
                    required="true"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="family-name"
                      class="MuiInputBase-input emotion-57"
                      data-se="userProfile.lastName"
                      id="userProfile.lastName"
                      name="userProfile.lastName"
                      required=""
                      type="text"
                    />
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-20"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-54"
                    data-shrink="false"
                    for="credentials.passcode"
                  >
                    Password
                    <span
                      aria-hidden="true"
                      class="no-translate MuiBox-root emotion-55"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-56"
                    dir="ltr"
                    required="true"
                  >
                    <input
                      aria-describedby=" credentials.passcode-error enroll-profile_PasswordRequirements_NON_NULL_VALUE_3 "
                      aria-invalid="true"
                      autocomplete="new-password"
                      class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-57"
                      data-se="credentials.passcode"
                      id="credentials.passcode"
                      name="credentials.passcode"
                      required=""
                      type="password"
                    />
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-76"
                    >
                      <button
                        aria-controls="credentials.passcode"
                        aria-label="Show password"
                        aria-pressed="false"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-77"
                        data-mui-internal-clone-element="true"
                        tabindex="0"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-9"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-20"
                  >
                    <p
                      class="MuiFormHelperText-root Mui-error emotion-80"
                      data-se="credentials.passcode-error"
                      id="credentials.passcode-error"
                      role="alert"
                    >
                      <div
                        class="MuiBox-root emotion-81"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 emotion-82"
                        >
                          Password requirements were not met:
                        </p>
                        <ul
                          class="MuiList-root MuiList-dense emotion-83"
                        >
                          <li
                            class="MuiListItem-root MuiListItem-dense MuiListItem-gutters emotion-84"
                          >
                            At least 8 characters
                          </li>
                          <li
                            class="MuiListItem-root MuiListItem-dense MuiListItem-gutters emotion-84"
                          >
                            An uppercase letter
                          </li>
                        </ul>
                      </div>
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-87"
                  data-type="save"
                  tabindex="0"
                  type="submit"
                >
                  Sign Up
                </button>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-89"
                />
              </div>
              <div
                class="MuiBox-root emotion-90"
              >
                <div
                  class="MuiBox-root emotion-12"
                >
                  <div
                    class="MuiBox-root emotion-13"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-17"
                      data-se="haveaccount"
                      id="enroll-profile_Description_Already_have_an_account_NON_NULL_VALUE_11"
                    >
                      Already have an account?
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-12"
                >
                  <button
                    class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-95"
                    data-se="back"
                    role="link"
                  >
                    Sign In
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`enroll-profile-with-password should display field level error when password field is required but is not filled 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="siwContainer MuiBox-root emotion-2"
      >
        <div
          class="okta-sign-in-header auth-header siwHeader MuiBox-root emotion-3"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 emotion-4"
          />
        </div>
        <div
          class="MuiBox-root emotion-5"
        >
          <form
            class="o-form siwForm"
            data-se="o-form"
            novalidate=""
          >
            <div
              class="MuiBox-root emotion-6"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-7"
                role="alert"
              >
                <div
                  class="MuiAlert-icon emotion-8"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-9"
                    fill="none"
                    focusable="false"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M13.983 14.6471C13.4706 15 12.6329 15 10.9575 15H5.04248C3.36707 15 2.52937 15 2.01699 14.6471C1.56939 14.3387 1.26655 13.8615 1.17816 13.3252C1.07698 12.7114 1.43367 11.9534 2.14706 10.4374L5.10455 4.15277C6.02878 2.18879 6.49089 1.2068 7.12576 0.898255C7.6777 0.630012 8.32225 0.630012 8.87419 0.898255C9.50906 1.2068 9.97117 2.18879 10.8954 4.15277L13.8529 10.4374C14.5663 11.9534 14.923 12.7114 14.8218 13.3252C14.7334 13.8615 14.4306 14.3387 13.983 14.6471ZM7.99998 10C7.72383 10 7.49998 9.77614 7.49998 9.5L7.49998 5H8.49998L8.49998 9.5C8.49998 9.77614 8.27612 10 7.99998 10ZM7.99998 13C8.14831 13 8.29332 12.956 8.41665 12.8736C8.53999 12.7912 8.63612 12.6741 8.69288 12.537C8.74965 12.4 8.7645 12.2492 8.73556 12.1037C8.70662 11.9582 8.6352 11.8246 8.53031 11.7197C8.42542 11.6148 8.29178 11.5434 8.14629 11.5144C8.00081 11.4855 7.85001 11.5003 7.71296 11.5571C7.57592 11.6139 7.45878 11.71 7.37637 11.8333C7.29396 11.9567 7.24998 12.1017 7.24998 12.25C7.24998 12.4489 7.32899 12.6397 7.46964 12.7803C7.6103 12.921 7.80106 13 7.99998 13Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <div
                  class="MuiAlert-message emotion-10"
                >
                  We found some errors. Please review the form and make corrections.
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root emotion-11"
            >
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-13"
                >
                  <h2
                    class="MuiTypography-root MuiTypography-h4 emotion-14"
                    data-se="o-form-head"
                    id="enroll-profile_Title_Sign_up_NON_NULL_VALUE_1"
                    tabindex="-1"
                  >
                    Sign up
                  </h2>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-13"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-17"
                    data-se="o-form-explain"
                    id="enroll-profile_Description_Fields_are_required_unless_marked_optional_NON_NULL_VALUE_2"
                  >
                    Fields are required unless marked optional.
                  </p>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <figure
                  class="MuiBox-root emotion-19"
                  data-se="password-authenticator--rules"
                  id="enroll-profile_PasswordRequirements_NON_NULL_VALUE_3"
                >
                  <figcaption
                    class="password-authenticator--heading MuiBox-root emotion-20"
                  >
                    Password requirements:
                  </figcaption>
                  <ul
                    class="MuiBox-root emotion-21"
                    id="password-authenticator--list"
                  >
                    <li
                      class="MuiBox-root emotion-22"
                    >
                      <div
                        class="MuiBox-root emotion-23"
                      >
                        <div
                          aria-hidden="true"
                          class="passwordRequirementIcon MuiBox-root emotion-24"
                        >
                          <svg
                            class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-25"
                            fill="none"
                            focusable="false"
                            role="img"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <title>
                              info
                            </title>
                          </svg>
                        </div>
                        <div
                          class="MuiBox-root emotion-20"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-27"
                          >
                            At least 8 characters
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-22"
                    >
                      <div
                        class="MuiBox-root emotion-23"
                      >
                        <div
                          aria-hidden="true"
                          class="passwordRequirementIcon MuiBox-root emotion-24"
                        >
                          <svg
                            class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-25"
                            fill="none"
                            focusable="false"
                            role="img"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <title>
                              info
                            </title>
                          </svg>
                        </div>
                        <div
                          class="MuiBox-root emotion-20"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-27"
                          >
                            A lowercase letter
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-22"
                    >
                      <div
                        class="MuiBox-root emotion-23"
                      >
                        <div
                          aria-hidden="true"
                          class="passwordRequirementIcon MuiBox-root emotion-24"
                        >
                          <svg
                            class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-25"
                            fill="none"
                            focusable="false"
                            role="img"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <title>
                              info
                            </title>
                          </svg>
                        </div>
                        <div
                          class="MuiBox-root emotion-20"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-27"
                          >
                            An uppercase letter
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-22"
                    >
                      <div
                        class="MuiBox-root emotion-23"
                      >
                        <div
                          aria-hidden="true"
                          class="passwordRequirementIcon MuiBox-root emotion-24"
                        >
                          <svg
                            class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-25"
                            fill="none"
                            focusable="false"
                            role="img"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <title>
                              info
                            </title>
                          </svg>
                        </div>
                        <div
                          class="MuiBox-root emotion-20"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-27"
                          >
                            A number
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-22"
                    >
                      <div
                        class="MuiBox-root emotion-23"
                      >
                        <div
                          aria-hidden="true"
                          class="passwordRequirementIcon MuiBox-root emotion-24"
                        >
                          <svg
                            class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-25"
                            fill="none"
                            focusable="false"
                            role="img"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <title>
                              info
                            </title>
                          </svg>
                        </div>
                        <div
                          class="MuiBox-root emotion-20"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-27"
                          >
                            No parts of your username
                          </p>
                        </div>
                      </div>
                    </li>
                  </ul>
                </figure>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-20"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-54"
                    data-shrink="false"
                    for="userProfile.email"
                  >
                    Email
                    <span
                      aria-hidden="true"
                      class="no-translate MuiBox-root emotion-55"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-56"
                    required="true"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="email"
                      class="MuiInputBase-input emotion-57"
                      data-se="userProfile.email"
                      id="userProfile.email"
                      inputmode="email"
                      name="userProfile.email"
                      required=""
                      type="text"
                    />
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-20"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-54"
                    data-shrink="false"
                    for="userProfile.firstName"
                  >
                    First name
                    <span
                      aria-hidden="true"
                      class="no-translate MuiBox-root emotion-55"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-56"
                    required="true"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="given-name"
                      class="MuiInputBase-input emotion-57"
                      data-se="userProfile.firstName"
                      id="userProfile.firstName"
                      name="userProfile.firstName"
                      required=""
                      type="text"
                    />
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-20"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-54"
                    data-shrink="false"
                    for="userProfile.lastName"
                  >
                    Last name
                    <span
                      aria-hidden="true"
                      class="no-translate MuiBox-root emotion-55"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-56"
                    required="true"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="family-name"
                      class="MuiInputBase-input emotion-57"
                      data-se="userProfile.lastName"
                      id="userProfile.lastName"
                      name="userProfile.lastName"
                      required=""
                      type="text"
                    />
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-20"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-54"
                    data-shrink="false"
                    for="credentials.passcode"
                  >
                    Password
                    <span
                      aria-hidden="true"
                      class="no-translate MuiBox-root emotion-55"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-56"
                    dir="ltr"
                    required="true"
                  >
                    <input
                      aria-describedby=" credentials.passcode-error enroll-profile_PasswordRequirements_NON_NULL_VALUE_3 "
                      aria-invalid="true"
                      autocomplete="new-password"
                      class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-57"
                      data-se="credentials.passcode"
                      id="credentials.passcode"
                      name="credentials.passcode"
                      required=""
                      type="password"
                    />
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-76"
                    >
                      <button
                        aria-controls="credentials.passcode"
                        aria-label="Show password"
                        aria-pressed="false"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-77"
                        data-mui-internal-clone-element="true"
                        tabindex="0"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-9"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-20"
                  >
                    <p
                      class="MuiFormHelperText-root Mui-error emotion-80"
                      data-se="credentials.passcode-error"
                      id="credentials.passcode-error"
                      role="alert"
                    >
                      This field cannot be left blank
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-82"
                  data-type="save"
                  tabindex="0"
                  type="submit"
                >
                  Sign Up
                </button>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-84"
                />
              </div>
              <div
                class="MuiBox-root emotion-85"
              >
                <div
                  class="MuiBox-root emotion-12"
                >
                  <div
                    class="MuiBox-root emotion-13"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-17"
                      data-se="haveaccount"
                      id="enroll-profile_Description_Already_have_an_account_NON_NULL_VALUE_11"
                    >
                      Already have an account?
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-12"
                >
                  <button
                    class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-90"
                    data-se="back"
                    role="link"
                  >
                    Sign In
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`enroll-profile-with-password should render form 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="siwContainer MuiBox-root emotion-2"
      >
        <div
          class="okta-sign-in-header auth-header siwHeader MuiBox-root emotion-3"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 emotion-4"
          />
        </div>
        <div
          class="MuiBox-root emotion-5"
        >
          <form
            class="o-form siwForm"
            data-se="o-form"
            novalidate=""
          >
            <div
              class="MuiBox-root emotion-6"
            >
              <div
                class="MuiBox-root emotion-7"
              >
                <div
                  class="MuiBox-root emotion-8"
                >
                  <h2
                    class="MuiTypography-root MuiTypography-h4 emotion-9"
                    data-se="o-form-head"
                    id="enroll-profile_Title_Sign_up_NON_NULL_VALUE_1"
                    tabindex="-1"
                  >
                    Sign up
                  </h2>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-7"
              >
                <div
                  class="MuiBox-root emotion-8"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-12"
                    data-se="o-form-explain"
                    id="enroll-profile_Description_Fields_are_required_unless_marked_optional_NON_NULL_VALUE_2"
                  >
                    Fields are required unless marked optional.
                  </p>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-7"
              >
                <figure
                  class="MuiBox-root emotion-14"
                  data-se="password-authenticator--rules"
                  id="enroll-profile_PasswordRequirements_NON_NULL_VALUE_3"
                >
                  <figcaption
                    class="password-authenticator--heading MuiBox-root emotion-15"
                  >
                    Password requirements:
                  </figcaption>
                  <ul
                    class="MuiBox-root emotion-16"
                    id="password-authenticator--list"
                  >
                    <li
                      class="MuiBox-root emotion-17"
                    >
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <div
                          aria-hidden="true"
                          class="passwordRequirementIcon MuiBox-root emotion-19"
                        >
                          <svg
                            class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-20"
                            fill="none"
                            focusable="false"
                            role="img"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <title>
                              info
                            </title>
                          </svg>
                        </div>
                        <div
                          class="MuiBox-root emotion-15"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-22"
                          >
                            At least 8 characters
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-17"
                    >
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <div
                          aria-hidden="true"
                          class="passwordRequirementIcon MuiBox-root emotion-19"
                        >
                          <svg
                            class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-20"
                            fill="none"
                            focusable="false"
                            role="img"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <title>
                              info
                            </title>
                          </svg>
                        </div>
                        <div
                          class="MuiBox-root emotion-15"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-22"
                          >
                            A lowercase letter
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-17"
                    >
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <div
                          aria-hidden="true"
                          class="passwordRequirementIcon MuiBox-root emotion-19"
                        >
                          <svg
                            class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-20"
                            fill="none"
                            focusable="false"
                            role="img"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <title>
                              info
                            </title>
                          </svg>
                        </div>
                        <div
                          class="MuiBox-root emotion-15"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-22"
                          >
                            An uppercase letter
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-17"
                    >
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <div
                          aria-hidden="true"
                          class="passwordRequirementIcon MuiBox-root emotion-19"
                        >
                          <svg
                            class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-20"
                            fill="none"
                            focusable="false"
                            role="img"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <title>
                              info
                            </title>
                          </svg>
                        </div>
                        <div
                          class="MuiBox-root emotion-15"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-22"
                          >
                            A number
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-17"
                    >
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <div
                          aria-hidden="true"
                          class="passwordRequirementIcon MuiBox-root emotion-19"
                        >
                          <svg
                            class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-20"
                            fill="none"
                            focusable="false"
                            role="img"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <title>
                              info
                            </title>
                          </svg>
                        </div>
                        <div
                          class="MuiBox-root emotion-15"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-22"
                          >
                            No parts of your username
                          </p>
                        </div>
                      </div>
                    </li>
                  </ul>
                </figure>
              </div>
              <div
                class="MuiBox-root emotion-7"
              >
                <div
                  class="MuiBox-root emotion-15"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-49"
                    data-shrink="false"
                    for="userProfile.email"
                  >
                    Email
                    <span
                      aria-hidden="true"
                      class="no-translate MuiBox-root emotion-50"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-51"
                    required="true"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="email"
                      class="MuiInputBase-input emotion-52"
                      data-se="userProfile.email"
                      id="userProfile.email"
                      inputmode="email"
                      name="userProfile.email"
                      required=""
                      type="text"
                    />
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-7"
              >
                <div
                  class="MuiBox-root emotion-15"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-49"
                    data-shrink="false"
                    for="userProfile.firstName"
                  >
                    First name
                    <span
                      aria-hidden="true"
                      class="no-translate MuiBox-root emotion-50"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-51"
                    required="true"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="given-name"
                      class="MuiInputBase-input emotion-52"
                      data-se="userProfile.firstName"
                      id="userProfile.firstName"
                      name="userProfile.firstName"
                      required=""
                      type="text"
                    />
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-7"
              >
                <div
                  class="MuiBox-root emotion-15"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-49"
                    data-shrink="false"
                    for="userProfile.lastName"
                  >
                    Last name
                    <span
                      aria-hidden="true"
                      class="no-translate MuiBox-root emotion-50"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-51"
                    required="true"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="family-name"
                      class="MuiInputBase-input emotion-52"
                      data-se="userProfile.lastName"
                      id="userProfile.lastName"
                      name="userProfile.lastName"
                      required=""
                      type="text"
                    />
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-7"
              >
                <div
                  class="MuiBox-root emotion-15"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-49"
                    data-shrink="false"
                    for="credentials.passcode"
                  >
                    Password
                    <span
                      aria-hidden="true"
                      class="no-translate MuiBox-root emotion-50"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-51"
                    dir="ltr"
                    required="true"
                  >
                    <input
                      aria-describedby="enroll-profile_PasswordRequirements_NON_NULL_VALUE_3"
                      aria-invalid="false"
                      autocomplete="new-password"
                      class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-52"
                      data-se="credentials.passcode"
                      id="credentials.passcode"
                      name="credentials.passcode"
                      required=""
                      type="password"
                    />
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-71"
                    >
                      <button
                        aria-controls="credentials.passcode"
                        aria-label="Show password"
                        aria-pressed="false"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-72"
                        data-mui-internal-clone-element="true"
                        tabindex="0"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-73"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-7"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-75"
                  data-type="save"
                  tabindex="0"
                  type="submit"
                >
                  Sign Up
                </button>
              </div>
              <div
                class="MuiBox-root emotion-7"
              >
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-77"
                />
              </div>
              <div
                class="MuiBox-root emotion-78"
              >
                <div
                  class="MuiBox-root emotion-7"
                >
                  <div
                    class="MuiBox-root emotion-8"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-12"
                      data-se="haveaccount"
                      id="enroll-profile_Description_Already_have_an_account_NON_NULL_VALUE_11"
                    >
                      Already have an account?
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-7"
                >
                  <button
                    class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-83"
                    data-se="back"
                    role="link"
                  >
                    Sign In
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>
</div>
`;
